<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/uiIvBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:src="@drawable/ic_arrow_back_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uiTvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/str_sign_up"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiIvBack" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uiEtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/ic_user"
        android:drawableTint="@color/grey_600"
        android:drawablePadding="10dp"
        android:hint="@string/str_name"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiTvSignUp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uiEtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/str_email"
        android:drawableStart="@drawable/ic_black_mail"
        android:drawableTint="@color/grey_600"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiEtName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uiEtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_password"
        android:drawableTint="@color/grey_600"
        android:drawablePadding="10dp"
        android:hint="@string/str_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiEtEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uiEtBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/str_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uiEtPassword"
        android:drawableStart="@drawable/icon_birthday"
        android:drawableTint="@color/grey_600"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        app:startIconDrawable="@drawable/ic_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uiBtnJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/pink_700"
        android:text="@string/str_join"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/uiEtBirthday" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uiTvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/str_already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiBtnJoin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uiTvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/str_sign_in"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/uiTvMessage"
        app:layout_constraintTop_toBottomOf="@+id/uiBtnJoin" />

</androidx.constraintlayout.widget.ConstraintLayout>